# lazydspy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh-cn.md  agent.json  mypy.ini  prd.md  pyproject.toml  ruff.toml
docs/: migration-design.md  sdk-reference.md
src/: core.py  dspy.py  metrics.py  pydantic.py
src/lazydspy/: __init__.py  __main__.py  agent.py  cli.py  models.py  optimize.py  optimized_state.json  prompts.py  schemas.py  specs.py  state.py  tools.py
src/lazydspy/agent/: __init__.py  config.py  prompts.py  runner.py  session.py
src/lazydspy/data/: dev.jsonl  train.jsonl
src/lazydspy/knowledge/: __init__.py  cost_models.py  optimizers.py
src/lazydspy/models/: __init__.py  config.py  hyperparams.py
src/lazydspy/tools/: __init__.py  data_ops.py  domain_ops.py  file_ops.py  session_ops.py
src/rich/: __init__.py  console.py  panel.py  table.py
src/typer/: __init__.py
tests/: conftest.py  e2e_test.py  test_cli_session.py  test_core.py  test_metrics.py  test_schemas.py
