[project]
name = "lazydspy"
version = "0.1.0"
description = "CLI/Agent that collects requirements and generates ready-to-run DSPy optimization scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy",
    "openai",
    "pydantic>=2",
    "python-dotenv",
    "rich",
    "typer>=0.12",
    "claude-agent-sdk==0.1.17",
]

[project.scripts]
lazydspy = "lazydspy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazydspy"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.uv]
dev-dependencies = [
    "mypy",
    "pytest",
    "ruff",
]
