[project]
name = "lazydspy"
version = "0.1.0"
description = "CLI/Agent that collects requirements and generates ready-to-run DSPy optimization scripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy",
    "openai",
    "pydantic>=2",
    "python-dotenv",
    "rich",
    "typer>=0.12",
    "claude-agent-sdk==0.1.17",
]

[project.scripts]
lazydspy = "lazydspy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazydspy"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src"]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = false
allow_redefinition = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
