[project]
name = "lazydspy"
version = "0.2.0"
description = "Agent-driven CLI that generates ready-to-run DSPy optimization scripts through conversation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.17",
    "pydantic>=2",
    "rich",
    "typer>=0.12",
]

[project.scripts]
lazydspy = "lazydspy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazydspy"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src"]
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
allow_redefinition = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
